fix: hide community link on smaller screens

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -184,3 +184,10 @@ $opacity: 0.8;
     }
   }
 }
+
+
+@media (max-width: 1000px) {
+  .community-link {
+    display: none;
+  }
+}
